cmake_minimum_required(VERSION 3.13)
project(DSAlab6)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSAlab6 main.cpp SMMIterator.cpp SMMIterator.h SortedMultiMap.cpp SortedMultiMap.h ShortTest.cpp ShortTest.h ExtendedTest.cpp ExtendedTest.h DynamicVector.cpp DynamicVector.h ValueIterator.cpp ValueIterator.h)